--- a/views/_footer.pug
+++ b/views/_footer.pug
@@ -1,6 +1,6 @@
 footer.footer 
   .footer__logo
-    img(src='img/logo-green.png', alt='Natours logo')
+    img(src='/img/logo-green.png', alt='Natours logo')
   ul.footer__nav 
     //- DOC the semicolon is used to "simulate" a line break
     //- with indentation, so that the code is more readable
