--- a/views/base.pug
+++ b/views/base.pug
@@ -21,4 +21,7 @@ html
     include _footer
 
 
-  script(src='/js/mapbox.js')
+  //- script(src='/js/mapbox.js')
+  //- script(src='/js/login.js')
+  //- script(src='https://cdnjs.cloudflare.com/ajax/libs/axios/1.2.3/axios.min.js')
+  script(src='/js/bundled/index.js')
