--- a/views/account.pug
+++ b/views/account.pug
@@ -29,8 +29,10 @@ block content
         .user-view__content
           .user-view__form-container
             h2.heading-secondary.ma-bt-md Your account settings
+            //- WITHOUT API
             //- Just for reference, we're using the API
-            //- form.form.form-user-data(action='/submit-user-data' method='POST')
+            //- enctype='multipart/form-data' is required for file uploads
+            //- form.form.form-user-data(action='/submit-user-data' method='POST' enctype='multipart/form-data')
 
             form.form.form-user-data
               .form__group
@@ -41,7 +43,9 @@ block content
                 input#email.form__input(type='email', name='email', value=`${user.email}`, required)
               .form__group.form__photo-upload
                 img.form__user-photo(src=`/img/user/${user.photo}`, alt='User photo')
-                a.btn-text(href='') Choose new photo
+                input.form__upload(type='file', id='photo', name='photo', accept='image/*')
+                label(for='photo') Choose new photo
+                
               .form__group.right
                 button.btn.btn--small.btn--green Save settings
 
